--- a/src/views/Login.ejs
+++ b/src/views/Login.ejs
@@ -34,7 +34,7 @@
         <div class="">
             <a href="./signup" class="mx-auto mt-2 d-block">Sign up</a>
             <div id="g_id_onload"
-                data-client_id="1097965274780-1kstlnt1lqh3kmu6shlt6bqk8hd7t68t.apps.googleusercontent.com"
+                data-client_id="REPLACE_WITH_YOUR_CLIENT_ID"
                 data-context="signin" data-ux_mode="popup" data-login_uri="http://localhost:8080/google_login"
                 data-auto_prompt="false">
             </div>
