--- a/src/views/Homepage.ejs
+++ b/src/views/Homepage.ejs
@@ -26,7 +26,7 @@
                 <div id="search-bars" class="mt-3 d-flex justify-content-center">
 
                     <select name="categories" id="categories" v-on:change="search_clubs" class="text-ctn search-bar">
-                        <option value="%" selected>Any</option>
+                        <option value="%" selected>Any categories</option>
                         <option value="academic">Academic</option>
                         <option value="campus-communities">Campus Communities</option>
                         <option value="hobbies">Hobbies</option>
@@ -65,10 +65,13 @@
         </div>
         <div id="event-detail">
             <button type="button" id="close" v-on:click="closeEventDetail">X</button>
-            <h1>{{event_details.event_name}}</h1>
-            <div>TIME: {{event_details.date_of_event}}</div>
-            <div>VENUE: {{event_details.place}}</div>
+            <h1 class="fw-bold">{{event_details.event_name}}</h1>
+            <hr>
+            <div class="alert-info">TIME: {{event_details.date_of_event}}</div>
+            <div class="alert-info">VENUE: {{event_details.place}}</div>
+            <br>
             <h3>Description</h3>
+            <hr>
             <p>{{event_details.event_description}}</p>
 
         </div>
