--- a/src/views/Login.ejs
+++ b/src/views/Login.ejs
@@ -17,7 +17,7 @@
 
 <body>
     <div>
-        <h1 id="webtitle" class="mx-4 my-2">CLUBFINDERS'</h1>
+        <h1 id="webtitle" class="mx-4 my-2"><a href="/" id="hpl">CLUBFINDERS'</a></h1>
     </div>
     <div id="loginctn" class="ctn">
         <div class="d-flex justify-content-center">
