--- a/src/views/Signup.ejs
+++ b/src/views/Signup.ejs
@@ -15,7 +15,7 @@
 
 <body>
     <div>
-        <h1 id="webtitle" class="mx-4 my-2">CLUBFINDERS'
+        <h1 id="webtitle" class="mx-4 my-2"><a href="/" id="hpl">CLUBFINDERS'</a></h1>
     </div>
     </div>
 
